# doodler

./: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  background.h  configure  configure.ac  doodler.cc  doodler.h  main.cc  platform.h  shader.cc  spriteclass.cc  spriteclass.h
inc/: doodler.h
src/: Makefile  Makefile.am  Makefile.in  background.cc  config.status  configure  configure.ac  doodler.cc  platform.cc  spriteclass.cc  spriteclass.h
src/.deps/: background.Po  doodler.Po  platform.Po  spriteclass.Po
src/autom4te.cache/: output.0  requests  traces.0  traces.1
